# anima

./: .gitmodules  CMakeLists.txt
src/: common.h  main.cpp
src/animation/: animation.cpp  animation.h
src/assets/: model.cpp  model.h
src/core/window/: window.cpp
src/graphics/opengl/: object.cpp  object.h  shader.cpp  shader.h  vao.cpp  vao.h
src/shaders/: default.frag  default.frag.h  default.vert  default.vert.h
